# FlightDeck

./: .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
flight_deck/: __init__.py
flight_deck/flight_deck_client/: __init__.py  base_client.py  client.py  dom.py
flight_deck/flight_deck_component/: ContentIterator.py  __init__.py  base_component.py  button.py  component.py  component_builder.py  interaction_component.py  xy_component.py
flight_deck/flight_deck_component/field/: __init__.py  date_field.py  field.py  options_field.py  text_field.py
flight_deck/flight_deck_component/impl/: __init__.py  br.py  button.py  form.py  logo.py  text.py
flight_deck/flight_deck_component/layout/: __init__.py  horizontal.py
flight_deck/flight_deck_display/: __init__.py  color.py  curses_display.py  display.py
flight_deck/flight_deck_exceptions/: client.py
flight_deck/flight_deck_page/: __init__.py  page_builder.py  page_registerer.py
